syntax = "proto3";

package pb;

option go_package = "./pb";

service Comment {
  rpc GetVideoCommentList (GetVideoCommentListReq) returns (GetVideoCommentListResp);
  rpc GetCommentReplyList (GetCommentReplyListReq) returns (GetCommentReplyListResp);
  rpc CommentVideo (CommentVideoReq) returns (CommentVideoResp);
  rpc ReplyComment (ReplyCommentReq) returns (ReplyCommentResp);
  rpc DeleteComment (DeleteCommentReq) returns (DeleteCommentResp);
}

message VideoComment {
  int64 comment_id = 1;
  int64 user_id = 2;
  string content = 3;
  int64 like_count = 4;
  int64 dislike_count = 5;
  int64 reply_count = 6;
  string create_time = 7;
  string update_time = 8;
}
message GetVideoCommentListReq {
  int64 video_id = 1;
}
message GetVideoCommentListResp {
  repeated VideoComment video_comment_list = 1;
}

message CommentReply {
  int64 comment_id = 1;
  int64 user_id = 2;
  string content = 3;
  int64 like_count = 4;
  int64 dislike_count = 5;
  string create_time = 6;
  string update_time = 7;
}
message GetCommentReplyListReq {
  int64 comment_id = 1;
}
message GetCommentReplyListResp {
  repeated CommentReply comment_reply_list = 1;
}

message CommentVideoReq {
  int64 user_id = 1;
  int64 video_id = 2;
  string content = 3;
}
message CommentVideoResp {
  bool success = 1;
}

message ReplyCommentReq {
  int64 user_id = 1;
  int64 comment_id = 2;
  string content = 3;
}
message ReplyCommentResp {
  bool success = 1;
}

message DeleteCommentReq {
  int64 user_id = 1;
  int64 comment_id = 2;
}
message DeleteCommentResp {
  bool success = 1;
}
